# SWE_FVM

./: .gitignore  Bathymetry.cpp  Bathymetry.h  CMakeLists.txt  CMakeSettings.json  CentralUpwindKurganov.hpp  ConfigParser.cpp  ConfigParser.h  ConfigParser.hpp  ConsAssigner.cpp  ConsAssigner.h  CubicPolyMath.hpp  DimensionManager.cpp  DimensionManager.h  DimensionManager.hpp  Doxyfile  EulerForwardSolver.h  FluxField.h  Includes.h  KurganovFluxMethod.cpp  KurganovFluxMethod.h  LICENSE.txt  MUSCLObject.cpp  MUSCLObject.h  Main.cpp  Mesh.hpp  PointOperations.cpp  PointOperations.h  PointOperations.hpp  README.md  ResultAnalyzers.hpp  Solver.cpp  Solver.h  StructTriangMesh.hpp  TestAll.cpp  Tests.hpp  TriangMesh.cpp  TriangMesh.h  TriangMesh.hpp  TriangSurfReconst.hpp  (+9 more)
docs/: Assigners_8cpp.html  Assigners_8h.html  Assigners_8h_source.html  Bathymetry_8cpp.html  Bathymetry_8h.html  Bathymetry_8h_source.html  ConfigParser_8cpp.html  ConfigParser_8h.html  ConfigParser_8h_source.html  CubicPolyMath_8h.html  CubicPolyMath_8h_source.html  DimensionManager_8cpp.html  DimensionManager_8h.html  DimensionManager_8h_source.html  Exceptions_8h.html  Exceptions_8h_source.html  Fluxes_8cpp.html  Fluxes_8h.html  Fluxes_8h_source.html  Includes_8h.html  Includes_8h_source.html  MUSCLObject_8cpp.html  MUSCLObject_8h.html  MUSCLObject_8h_source.html  Main_8cpp.html  PointOperations_8cpp.html  PointOperations_8h.html  PointOperations_8h_source.html  Solvers_8cpp.html  Solvers_8h.html  Solvers_8h_source.html  SpaceDisc_8cpp.html  SpaceDisc_8h.html  SpaceDisc_8h_source.html  StructTriangMesh_8cpp.html  StructTriangMesh_8h.html  StructTriangMesh_8h_source.html  Tests_8h.html  Tests_8h_source.html  TimeDisc_8cpp.html  (+119 more)
docs/html/: Bathymetry_8h_source.html  ConfigParser_8h.html  ConfigParser_8h_source.html  CubicPolyMath_8h_source.html  DimensionManager_8h.html  Exceptions_8h.html  Fluxes_8cpp.html  Fluxes_8h.html  Includes_8h.html  MUSCLObject_8cpp.html  MUSCLObject_8h_source.html  PointOperations_8cpp.html  Solvers_8cpp.html  Solvers_8h.html  Solvers_8h_source.html  SpaceDisc_8h_source.html  StructTriangMesh_8cpp.html  StructTriangMesh_8h.html  Tests_8h.html  TimeDisc_8h.html  TriangMesh_8h.html  ValueField_8cpp.html  ValueField_8h_source.html  annotated.html  classClassicThackerTest-members.html  classClassicThackerTest.html  classLakeAtRestTest-members.html  (+50 more)
examples/: Main.cpp  Tests.h  bowl.msh
include/: Assigners.h  Bathymetry.h  ConfigParser.h  ConsAssigner.h  CubicPolyMath.h  CubicPolyMath.hpp  DimensionManager.h  Exceptions.h  Fluxes.h  Includes.h  MUSCLObject.h  PointOperations.h  PythonFacade.h  Solver.h  Solvers.h  SpaceDisc.h  SpaceIntegrators.h  StructTriangMesh.h  Tests.h  Tests.hpp  TimeDisc.h  TimeIntegrators.h  TriangMesh.h  ValueField.h
notebooks/: Bowl.ipynb  Mesher.ipynb  Untitled.ipynb  Untitled1.ipynb  basic.msh  geometry.txt  mesher.py
pybind/: Topology.cpp
src/: Assigners.cpp  Bathymetry.cpp  ConfigParser.cpp  ConsAssigner.cpp  DimensionManager.cpp  Fluxes.cpp  MUSCLObject.cpp  Main.cpp  PointOperations.cpp  PythonFacade.cpp  Solver.cpp  Solvers.cpp  SpaceDisc.cpp  SpaceIntegrators.cpp  StructTriangMesh.cpp  TimeDisc.cpp  TimeIntegrators.cpp  TriangMesh.cpp  ValueField.cpp
(+172 files in other folders)
